--- a/index.html
+++ b/index.html
@@ -59,9 +59,25 @@
     th {
       background-color: #f4f4f4;
     }
+    .logo-holder {
+      display: flex;
+      align-items: center;
+    }
+    .img {
+      height: 100px;
+      width: 100px;
+      margin-right: 20px;
+    }
   </style>
 </head>
 <body>
+  <div class="logo-holder">
+    <img src="rahlogo.jpg" alt="Company Logo" class="img">
+    <div>
+      <h2>COMPANY NAME</h2>
+      <p>RAH REAL ESTATE DEVELOPMENT AND TRANSPORTATION LIMITED</p>
+    </div>
+  </div>
   <h1>Staff Meeting</h1>
   <h2>MEETING MINUTES</h2>
   <form id="meetingForm">
