--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
   </style>
 </head>
 <body>
-  
+  <div class="logo-holder">
+    <img src="rahlogo.jpg" alt="Company Logo" class="img">
+   
+  </div>
   <h1>Staff Meeting</h1>
   <h2>MEETING MINUTES</h2>
   <form id="meetingForm">
