RAH REAL ESTATE DEVELOPMENT AND TRANSPORTATION

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
   <div class="logo-holder">
     <img src="rahlogo.jpg" alt="Company Logo" class="img">
-   
+    <h2>RAH REAL ESTATE DEVELOPMENT AND TRANSPORTATION</h2>
   </div>
   <h1>Staff Meeting</h1>
   <h2>MEETING MINUTES</h2>
